--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "action-template",
+  "name": "latest-release-badge",
   "version": "1.0.0",
-  "description": "",
+  "description": "A github Action that takes the repo name and owner and returns the latest release badge",
   "type": "module",
   "main": "index.js",
   "scripts": {
@@ -11,11 +11,12 @@
     "build": "ncc build index.js -o dist",
     "prebuild": "npm run lint && npm run update-readme"
   },
-  "author": "",
+  "author": "Richard Craddock",
   "license": "ISC",
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
+    "axios": "^1.7.7",
     "typescript": "^5.4.5",
     "yaml": "^2.4.1"
   },
@@ -23,8 +24,12 @@
     "@eslint/js": "^9.0.0",
     "@vercel/ncc": "^0.38.1",
     "action-docs": "^2.4.1",
-    "eslint": "^9.0.0",
-    "globals": "^15.0.0"
+    "eslint": "^8.51.0",
+    "globals": "^15.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.1.0",
+    "eslint-plugin-promise": "^6.1.1"
   },
   "volta": {
     "node": "20.12.1"
